# nano_qwen35_moe

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  export.py  export_model.py  inference.py  model.py  nano_qwen35_moe_inference.py  nano_qwen35_moe_model.py  nano_qwen35_moe_train.py  runner.cpp  train.py  verify_export.py
checkpoint/: ckpt.pt
data_shakespeare_char/: prepare.py
